[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "imglyb"
version = "2.1.1.dev0"
description = "A python module to bring together the worlds of NumPy (Python) and ImgLib2 (Java)."
license = {text = "Simplified BSD License"}
authors = [
    {name = "Philipp Hanslovsky"},
    {name = "Curtis Rueden", email = "ctrueden@wisc.edu"},
    {name = "Edward Evans"},
    {name = "Mark Hiner"},
    {name = "Gabriel Selzer"},
]
readme = "README.md"
keywords = ["java", "maven", "cross-language", "numpy", "imglib2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# NB: Keep this in sync with environment.yml AND dev-environment.yml!
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "jpype1 >= 1.3.0",
    "scyjava >= 1.3.0",
]

[project.optional-dependencies]
# NB: Keep this in sync with dev-environment.yml!
dev = [
    "autopep8",
    "black",
    "build",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "toml",
    "validate-pyproject[all]",
]

[project.urls]
homepage = "https://github.com/imglib/imglyb"
documentation = "https://github.com/imglib/imglyb/blob/main/README.md"
source = "https://github.com/imglib/imglyb"
download = "https://pypi.org/project/imglyb/"
tracker = "https://github.com/imglib/imglyb/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

# Thanks to Flake8-pyproject, we can configure flake8 here!
[tool.flake8]
exclude = ["bin", "build", "docs", "dist"]
extend-ignore = ["E203"]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
min_python_version = "3.8"

[tool.isort]
profile = "black"
