[build-system]
requires = [ "setuptools>=77.0.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "imglyb"
version = "2.1.1.dev0"
description = "A python module to bring together the worlds of NumPy (Python) and ImgLib2 (Java)."
license = "BSD-2-Clause"
authors = [
    {name = "Philipp Hanslovsky"},
    {name = "Curtis Rueden", email = "ctrueden@wisc.edu"},
    {name = "Edward Evans"},
    {name = "Mark Hiner"},
    {name = "Gabriel Selzer"},
]
readme = "README.md"
keywords = ["java", "maven", "cross-language", "numpy", "imglib2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# NB: Keep this in sync with environment.yml AND dev-environment.yml!
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "jpype1 >= 1.3.0",
    "scyjava >= 1.3.0",
]

[dependency-groups]
dev = [
    "build",
    "pytest",
    "pre-commit",
    "pytest-cov",
    "ruff",
    "toml",
    "validate-pyproject[all]",
]

[project.urls]
homepage = "https://github.com/imglib/imglyb"
documentation = "https://github.com/imglib/imglyb/blob/main/README.md"
source = "https://github.com/imglib/imglyb"
download = "https://pypi.org/project/imglyb/"
tracker = "https://github.com/imglib/imglyb/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 88
src = ["src", "tests"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
extend-exclude = ["bin", "build", "dist"]

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
addopts = "--ignore=docs"
testpaths = [
    "tests",
]
