[metadata]
name = imglyb
version = 2.0.2.dev0
author = Philipp Hanslovsky, Curtis Rueden, Edward Evans, Mark Hiner, Gabriel Selzer
author_email = ctrueden@wisc.edu
description = A python module to bring together the worlds of numpy (Python) and ImgLib2 (Java).
long_description = file: README.md
long_description_content_type = text/markdown
license = Simplified BSD License
url = https://github.com/imglib/imglyb
platforms = ['any']
project_urls =
    Bug Tracker = https://github.com/imglib/imglyb/issues
    Documentation = https://github.com/imglib/imglyb/blob/master/README.md
    Source Code = https://github.com/imglib/imglyb
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.6
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Java Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src

# Ensure any changes made to this list are also added to environment.yml AND environment-test.yml!
python_requires = >= 3.6
install_requires =
    numpy
    jpype1
    scyjava >= 1.3.0

[options.extras_require]

# Ensure any changes to this list are also added to environment-test.yml!
test =
    pytest
    pytest-cov
    build
    black
